# plot

./: LICENSE  pyproject.toml
.github/workflows/: ci.yml
vsplot/: __init__.py  matplotlib_settings.py
vsplot/test/: test_matplotlib_settings.py
